Week 5 final project update
